--- a/src/static/main.css
+++ b/src/static/main.css
@@ -462,7 +462,20 @@ img[alt=quote] {
   color: #48556a;
 }
 
-@media only screen and (min-width: 1440px) {
+@media only screen and (min-width: 600px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "daniel daniel" "jonathan jeanette" "patrick patrick" "kira kira";
+    margin: 10% auto;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: "daniel daniel jeanette" "jonathan patrick patrick" "kira kira kira";
+  }
+}
+@media only screen and (min-width: 1200px) {
   .container {
     width: 77vw;
     height: 70vh;
